5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1884_3179.log
== TEST (2019-07-04 18:35:43) 
-- CODE:
from numpy import*
u=array(eval(input("digite a matriz: ")))
v=zeros(size(mat), dtype = int)
c=0
for i in range (size(mat)):
	if(u[i] =! 1):
		v[c]=v[c]+u[i]
		c=c+1
for i in range (size(u)):
	if(u[i]==1 ):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
		
	
	
-- ERROR:
File "XXXX", line 6
    if(u[i] =! 1):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:35:57) 
-- CODE:
from numpy import*
u=array(eval(input("digite a matriz: ")))
v=zeros(size(mat), dtype = int)
c=0
for i in range (size(mat)):
	if(u[i] != 1):
		v[c]=v[c]+u[i]
		c=c+1
for i in range (size(u)):
	if(u[i]==1 ):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:36:46) 
-- CODE:
from numpy import*
u=array(eval(input("digite a matriz: ")))
v=zeros(size(mat), dtype = int)
c=0
for i in range (size(mat)):
	if(u[i] != 1):
		v[c]=v[c]+u[i]
		c=c+1
for i in range (size(u)):
	if(u[i]==1 ):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:37:12) 
-- CODE:
from numpy import*
u=array(eval(input("digite a matriz: ")))
v=zeros(size(mat), dtype = int)
c=0
for i in range (size(u)):
	if(u[i] != 1):
		v[c]=v[c]+u[i]
		c=c+1
for i in range (size(u)):
	if(u[i]==1 ):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:38:26) 
-- CODE:
from numpy import*
u=array(eval(input("digite a matriz: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range (size(u)):
	if(u[i] != 1):
		v[c]=v[c]+u[i]
		c=c+1
for i in range (size(u)):
	if(u[i]==1 ):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:40:27) 
-- CODE:
from numpy import*
mat=array(eval(input("digite a matriz: ")))
d=zeros(size(mat), dtype = int)
c=0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[c]=d[c]+mat[i]
		c=c+1
for i in range (size(mat)):
	if(mat[i]==1 ):
		d[c]=d[c]+mat[i]
		c=c+1
print(d)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:41:18) 
-- CODE:
from numpy import*
mat=array(eval(input("digite a matriz: ")))
d=zeros(size(mat), dtype = int)
cont=0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[cont]=d[cont]+mat[i]
		cont=cont+1
for i in range (size(mat)):
	if(mat[i]==1 ):
		d[cont]=d[cont]+mat[i]
		cont=cont+1
print(d)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:41:35) 
-- CODE:
from numpy import*
mat=array(eval(input("digite a matriz: ")))
d=zeros(size(mat), dtype = int)
cont=0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[cont]=d[cont]+mat[i]
		cont=cont+1
for i in range (size(mat)):
	if(mat[i]==1 ):
		d[cont]=d[cont]+mat[i]
		cont=cont+1
print(d)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:42:30) 
-- CODE:
from numpy import*
mat = array(eval(input("digite a matriz: ")))
d = zeros(size(mat), dtype = int)
cont = 0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
for i in range (size(mat)):
	if(mat[i]== 1 ):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
print(d)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:42:39) 
-- CODE:
from numpy import*
mat = array(eval(input("digite a matriz: ")))
d = zeros(size(mat), dtype = int)
cont = 0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
for i in range (size(mat)):
	if(mat[i]== 1 ):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
print(d)
		
	
	
-- EXECUTION TIME:
1.2593
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[ 2  3  4 -1  1  1  1]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[5 4 3 2 1 1 1]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 2 0 4 5 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:44:07) 
-- CODE:
from numpy import*
mat = array(eval(input("digite a matriz: ")))
d = zeros(size(mat), dtype = int)
cont = 0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
for i in range (size(mat)):
	if(mat[i]== 1 ):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
print(d)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:44:22) 
-- CODE:
from numpy import*
mat = array(eval(input("digite a matriz: ")))
d = zeros(size(mat), dtype = int)
cont = 0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
for i in range (size(mat)):
	if(mat[i]== 1 ):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
print(d)
		
	
	
-- EXECUTION TIME:
1.0153
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[ 2  3  4 -1  1  1  1]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[5 4 3 2 1 1 1]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 2 0 4 5 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:46:11) 
-- CODE:
from numpy import*
mat = array(eval(input("digite a matriz: ")))
d = zeros(size(mat), dtype = int)
cont = 0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
for i in range (size(mat)):
	if(mat[i]== 1 ):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
print(d)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:46:53) 
-- CODE:
from numpy import*
mat = array(eval(input("digite a matriz: ")))
d = zeros(size(mat), dtype = int)
cont = 0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
for i in range (size(mat)):
	if(mat[i]== 1 ):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
print(d)
		
	
	
-- EXECUTION TIME:
1.06203
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[ 2  3  4 -1  1  1  1]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[5 4 3 2 1 1 1]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 2 0 4 5 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:47:03) 
-- CODE:
from numpy import*
mat = array(eval(input("digite a matriz: ")))
d = zeros(size(mat), dtype = int)
cont = 0
for i in range (size(mat)):
	if(mat[i] != 1):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
for i in range (size(mat)):
	if(mat[i]== 1 ):
		d[cont] = d[cont]+mat[i]
		cont = cont + 1
print(d)
		
	
	
-- EXECUTION TIME:
1.05276
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[ 2  3  4 -1  1  1  1]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[5 4 3 2 1 1 1]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 2 0 4 5 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
